--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-svelte-app",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "18.17.1",
+    "npm": "9.6.7"
+  },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -9,7 +13,7 @@
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
+    "lint": "prettier --check .",
     "format": "prettier --write .",
     "test:integration": "playwright test",
     "test:unit": "vitest",
@@ -23,17 +27,13 @@
     "@sveltejs/adapter-cloudflare": "^4.7.3",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-    "@types/eslint": "^9.6.0",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0",
+    "typescript-eslint": "^7.0.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.0",
     "wrangler": "^3.83.0"
