--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check .",
-    "format": "prettier --write .",
+    "lint": "biome lint",
+    "format": "biome format --write ./",
     "test:integration": "playwright test",
-    "test:unit": "vitest",
-    "deploy": "npm run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
+    "test:unit": "vitest"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@cloudflare/workers-types": "^4.20241022.0",
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^3.0.0",
@@ -28,12 +27,9 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "globals": "^15.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
-    "typescript-eslint": "^7.0.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.0",
     "wrangler": "^3.83.0"
