--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@sveltejs/adapter-cloudflare": "^4.7.3",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "autoprefixer": "^10.4.20",
     "globals": "^15.0.0",
+    "postcss": "^8.4.47",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^4.0.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.0",
