Add WIP recommendations for svelte

--- a/biome.json
+++ b/biome.json
@@ -20,5 +20,20 @@
             ".wrangler/**",
             ".node_modules/**"
         ]
-    }
+    },
+    "overrides": [
+        {
+            "include": [
+                "*.svelte"
+            ],
+            "linter": {
+                "rules": {
+                    "style": {
+                        "useConst": "off",
+                        "useImportType": "off"
+                    }
+                }
+            }
+        }
+    ]
 }
