--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@logtail/edge": "^0.5.5"
+    "@logtail/edge": "^0.5.5",
+    "uuid": "^11.1.0"
   }
 }
